# day-in-the-life-copilot-lab

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ContosoUniversity.sln  LICENSE  Makefile  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.copilot/: mcp-config.json
ContosoUniversity_Python/: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  wsgi.py
ContosoUniversity_Python/app/: __init__.py  seed.py
ContosoUniversity_Python/app/forms/: __init__.py  course_forms.py  department_forms.py  instructor_forms.py  student_forms.py
ContosoUniversity_Python/app/models/: __init__.py  course.py  course_assignment.py  department.py  enrollment.py  enums.py  instructor.py  notification.py  office_assignment.py  person.py  student.py
ContosoUniversity_Python/app/repositories/: __init__.py  base.py
ContosoUniversity_Python/app/routes/: __init__.py  auth.py  courses.py  departments.py  home.py  instructors.py  students.py
ContosoUniversity_Python/app/services/: __init__.py  file_storage_service.py  notification_service.py  student_query_service.py
ContosoUniversity_Python/app/static/css/: site.css
ContosoUniversity_Python/app/static/js/: site.js
ContosoUniversity_Python/app/templates/: base.html
ContosoUniversity_Python/app/utils/: __init__.py
ContosoUniversity_Python/tests/: conftest.py
ContosoUniversity_Python/tests/integration/: test_routes.py
ContosoUniversity_Python/tests/unit/: test_models.py
labs/: lab01.md  (+17 more)
(+510 files in other folders)
