[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contoso-university"
version = "1.0.0"
description = "ContosoUniversity - A Python Flask web application for GitHub Copilot hands-on labs"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-wtf>=1.2",
    "flask-login>=0.6",
    "sqlalchemy>=2.0",
    "wtforms>=3.1",
    "python-dotenv>=1.0",
    "email-validator>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
e2e = [
    "playwright>=1.40",
    "pytest-playwright>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
